--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
@@ -12,7 +12,8 @@
     min-width: $height;
     height: $height;
   }
-  .card-columns {
-    column-count: 4 !important;
+
+  app-sidebar {
+    --width: 25%;
   }
 }
