--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
@@ -1,15 +1,19 @@
 <app-media-hub-header></app-media-hub-header>
 
 <mat-divider></mat-divider>
-<div class="row mx-0">
-    <div class="col-3 border-right p-0 h-100">
+
+
+<app-sidebar>
+    <div sidebar-drawer>
         <app-media-hub-folders></app-media-hub-folders>
     </div>
-    <div class="col-9">
+    <div sidebar-container class="p-3">
         <p class="bg-dark text-white py-1 px-2 mt-3">Media</p>
-        <div class="card-columns">
-            <app-media-card class="card border-0 shadow-sm" *ngFor="let file of files; let index = index;" [file]="file"
-                (onMarkChange)="addToMarkedFiles(index);"></app-media-card>
-        </div>
+        <app-masonry>
+            <app-masonry-item *ngFor="let file of files; let index = index;">
+                <app-media-card class="item" [file]="file" (onMarkChange)="addToMarkedFiles(index);">
+                </app-media-card>
+            </app-masonry-item>
+        </app-masonry>
     </div>
-</div>
+</app-sidebar>
