implement new sidebar vars

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<app-sidebar [toggled]="true" name="navbar">
+<app-sidebar name="navbar">
   <div sidebar-drawer class="sidebar-drawer border-right">
     <header #header>
       <app-navbar-header class="p-3"></app-navbar-header>
