--- a/src/app/pages/users/users-list/users-list.component.html
+++ b/src/app/pages/users/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<app-page-wrapper title="Sessions">
+<app-page-wrapper title="Users">
     <mat-card>
         <mat-card-content>
             <semi-table [dataSource]="$users | async">
