--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -1,2 +1,3 @@
 <ng-content select="[sidebar-drawer]"></ng-content>
+<span class="resizer"></span>
 <ng-content select="[sidebar-container]"></ng-content>
