--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,10 +1,11 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
+@import "functions";
+@import "mixins";
+@import "variables";
 
 html,
 body {
   height: 100%;
+  user-select: none;
 }
 
 body {
