fix scrolling issue in media hub

--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -23,7 +23,7 @@
     </ng-container>
 </mat-list>
 
-<mat-nav-list class="h-100">
+<mat-nav-list>
     <div class="d-flex" *ngFor="let folder of folders; let index = index;">
         <mat-list-item dense (click)="onFolderClick(folder)">
             <mat-icon mat-list-icon text-muted>
