--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import "mixins";
 
 :host {
   .folder-title {
@@ -12,7 +12,6 @@
     }
   }
   mat-nav-list {
-    @include overflowHeight(15px);
     overflow: auto;
   }
 }
