--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 :host {
   background-color: #fff;
   display: block;
@@ -15,5 +16,6 @@
 
   app-sidebar {
     --width: 25%;
+    @include overflowHeight(15px);
   }
 }
