--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -6,7 +6,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <div class="w-75">
                 <h6 class="title">{{file.name}}</h6>
-                <span class="text-uppercase bg-secondary mr-1 rounded">{{file.type}}</span>
+                <span class="text-uppercase bg-secondary mr-1 roundeds p-1">{{file.type}}</span>
                 <span class="text-uppercase">{{file.size / 1000 || ''}} kb</span>
             </div>
             <button mat-icon-button>
