--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
-@import '~bootstrap/scss/bootstrap.scss';
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import './app/app.theme';
-@import 'assets/scss/main';
-@import '~@ctrl/ngx-emoji-mart/picker';
+@import "~bootstrap/scss/bootstrap.scss";
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "./app/app.theme";
+@import "assets/scss/main";
+@import "~@ctrl/ngx-emoji-mart/picker";
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
 $typography: mat-typography-config(
   $font-family: "'Roboto', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400),
@@ -20,5 +20,10 @@ $typography: mat-typography-config(
   mat-dialog-container {
     padding: 0 !important;
     overflow: hidden;
+  }
+}
+.iti__selected-flag {
+  &:focus {
+    outline: none !important;
   }
 }
