--- a/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
+++ b/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
@@ -1,5 +1,3 @@
-<!-- <emoji-mart set="facebook" *ngIf="showEmojiPicker"></emoji-mart> -->
-
 <div class="actions-buttons box" *ngIf="showActionBar">
     <app-file-control (onChange)="uploadFiles($event)">
         <button mat-button>
@@ -34,10 +32,9 @@
                 <img class="img-fluid h-100 border-radius-1" [src]="file | async">
             </div>
         </div>
-        <textarea (keypress)="onActionBarVisibilityChange.emit()" value="" class="border-0 border-radius-1"
-            placeholder="Write a message" #messageInput cdkTextareaAutosize #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="1" cdkAutosizeMaxRows="4">
-                            </textarea>
+        <textarea (keypress)="textChange()" class="border-0 border-radius-1" placeholder="Write a message" #messageInput
+            cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
+            cdkAutosizeMaxRows="4"></textarea>
     </div>
     <button mat-icon-button class="ml-auto send-button" (click)="sendMessage(messageInput)">
         <mat-icon class="text--primary">send</mat-icon>
