--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center">
   <img ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
   <div class="text-wrapper">
-    <h6 class="mb-0 mt-2 ml-3 drawer-invisible">{{ 'Buildozer' | translate }} | Ezzabuzaid</h6>
+    <h6 class="mb-0 mt-2 ml-3 drawer-invisible">{{ 'Buildozer' | translate }} | {{($user | async)?.username}}</h6>
   </div>
 </div>
