--- a/src/app/pages/chat/chat-floating-button/chat-floating-button.component.html
+++ b/src/app/pages/chat/chat-floating-button/chat-floating-button.component.html
@@ -1,1 +1,1 @@
-<img class="shadow" matListAvatar ngxGravatar [email]="data.email" fallback="identicon">
+<img class="shadow" matListAvatar ngxGravatar [src]="data.avatar" [email]="data.avatar" fallback="identicon">
