show non image file in media hub

--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -1,12 +1,12 @@
 <mat-icon (click)="toggleChecking()" class="pointer check-icon position-absolute bg--accent text-white border-radius-1">
     check</mat-icon>
 <mat-card>
-    <img mat-card-image [src]="file.fullPath" [alt]="file.name" class="shadow">
+    <img *ngIf="isImage" mat-card-image [src]="file.fullPath" [alt]="file.name" class="shadow">
     <mat-card-content>
         <div class="d-flex align-items-center justify-content-between">
             <div class="w-75">
                 <h6 class="title">{{file.name}}</h6>
-                <span class="text-uppercase bg-secondary mr-1 roundeds p-1">{{file.type}}</span>
+                <span class="text-uppercase bg-secondary mr-1 roundeds p-1">{{formatType(file.type)}}</span>
                 <span class="text-uppercase">{{file.size / 1000 || ''}} kb</span>
             </div>
             <button mat-icon-button>
