--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,6 +1,6 @@
 // All scss mixins must be here, expand the mixins into folder if the file has a huge line
-@import '~bootstrap/scss/bootstrap-grid';
-@import 'variables';
+@import "~bootstrap/scss/bootstrap-grid";
+@import "variables";
 
 @mixin placeholder {
   &::-webkit-input-placeholder {
@@ -120,16 +120,16 @@
   }
 }
 
-@mixin backdrop($color: rgba(0, 0, 0, 0.5)) {
+@mixin backdrop($position: fixed, $color: rgba(0, 0, 0, 0.5)) {
   &::before {
-    position: fixed;
+    position: $position;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: $color;
     z-index: 999;
-    content: '';
+    content: "";
   }
 }
 
