--- a/src/app/widget/popup/prompt/prompt.component.html
+++ b/src/app/widget/popup/prompt/prompt.component.html
@@ -1,12 +1,14 @@
-<h5>{{ data?.title || ('complete' | translate) }}</h5>
+<h5 *ngIf="data.title" mat-dialog-title>{{ (data.title | translate) }}</h5>
+<mat-divider></mat-divider>
 <div mat-dialog-content>
-  <p>{{ data?.description }}</p>
-  <mat-form-field cdkFocusInitial>
-    <input [(ngModel)]="result" required type="text" matInput>
+  <p *ngIf="data.description">{{ data.description }}</p>
+  <mat-form-field cdkFocusInitial appearance="fill">
+    <input [(ngModel)]="data.value" required type="text" matInput>
   </mat-form-field>
 </div>
+<mat-divider></mat-divider>
 <div mat-dialog-actions class="justify-content-end">
-  <button color="accent" class="text-white" mat-flat-button [mat-dialog-close]="result">
-    {{ 'confirm' | translate }}
+  <button color="accent" class="w-25" mat-stroked-button [mat-dialog-close]="data.value">
+    {{ (data.confirm || 'confirm') | translate }}
   </button>
 </div>
