implement folder rename

--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -47,7 +47,7 @@
             <mat-icon>delete_outline</mat-icon>
             <span class="text-muted">Delete</span>
         </button>
-        <button mat-menu-item (click)="renameFolder(folder)">
+        <button mat-menu-item (click)="renameFolder(folder, index)">
             <mat-icon>text_format</mat-icon>
             <span class="text-muted">Rename</span>
         </button>
