use navbar mixin in page wrapper

--- a/src/app/partials/page-wrapper/page-wrapper.component.html
+++ b/src/app/partials/page-wrapper/page-wrapper.component.html
@@ -1,4 +1,6 @@
-<h5 class="text-capitalize bg-white py-3 px-3 text-dark border-bottom mb-5">{{ title }}</h5>
+<nav>
+    <h6 class="text-capitalize bg-white py-3 px-3 text-dark border-bottom mb-5">{{ title }}</h6>
+</nav>
 <div class="container-fluid">
     <ng-content></ng-content>
 </div>
