--- a/src/app/pages/chat/chat-group-card/chat-group-card.component.html
+++ b/src/app/pages/chat/chat-group-card/chat-group-card.component.html
@@ -1,8 +1,8 @@
 <app-chat-card>
     <div card-header class="py-2 d-flex align-items-center pl-2">
-        <img class="mr-2" mat-card-avatar ngxGravatar [src]="data.logo" fallback="identicon">
+        <img class="mr-2" mat-card-avatar ngxGravatar [src]="data.avatar" [email]="data.avatar" fallback="identicon">
         <div class="w-100 d-flex align-items-center justify-content-between">
-            <h6 class="mb-0">{{data.title}}</h6>
+            <h6 class="mb-0">{{data.name}}</h6>
             <div class="d-flex">
                 <button mat-icon-button>
                     <mat-icon class="text--accent">add</mat-icon>
