--- a/src/app/pages/media-hub/media-picker/media-picker.component.html
+++ b/src/app/pages/media-hub/media-picker/media-picker.component.html
@@ -9,7 +9,7 @@
             </mat-list-item>
         </mat-nav-list>
     </div>
-    <div sidebar-container class="p-3">
+    <div sidebar-container class="p-3 d-flex flex-column justify-content-between">
         <app-masonry>
             <app-masonry-item *ngFor="let file of files; let index = index;">
                 <app-media-card class="item" [file]="file" (onMarkChange)="addToMarkedFiles(index);">
@@ -17,7 +17,8 @@
             </app-masonry-item>
         </app-masonry>
         <footer class="text-right">
-            <button mat-flat-button [mat-dialog-close]="markedFiles" color="primary">Insert</button>
+            <button mat-flat-button [mat-dialog-close]="markedFiles" [disabled]="!markedFiles.length"
+                color="primary">Insert</button>
         </footer>
     </div>
 </app-sidebar>
