--- a/src/app/_app.theme.scss
+++ b/src/app/_app.theme.scss
@@ -1,9 +1,9 @@
-@import '~@angular/material/theming';
-@import 'functions';
-@import 'variables';
-@import 'layout/layout.theme';
-@import 'pages/portal/portal.theme';
-@import 'widget/upload-file/upload-file.theme';
+@import "~@angular/material/theming";
+@import "functions";
+@import "variables";
+@import "layout/layout.theme";
+@import "pages/portal/portal.theme";
+@import "widget/upload-file/upload-file.theme";
 
 @include mat-core();
 
@@ -16,8 +16,8 @@
 }
 
 .default-theme {
-  $primary: mat-palette($mat-blue, 700);
-  $accent: mat-palette($mat-blue-gray, 800);
+  $primary: mat-palette($mat-pink, 900);
+  $accent: mat-palette($mat-pink, 200);
   $theme: mat-light-theme($primary, $accent);
   @include application_theme($theme);
 }
