--- a/src/app/widget/country-control/country-control.component.html
+++ b/src/app/widget/country-control/country-control.component.html
@@ -3,13 +3,13 @@
     <mat-select matInput [formControl]="formControl" (selectionChange)="updateModel($event?.value)">
         <mat-select-trigger>
             <div class="iti__flag-box">
-                <div class="iti__flag iti__{{currentCountry?.code.toLowerCase()}}"></div>
+                <div class="iti__flag iti__{{currentCountry?.iso2}}"></div>
             </div>
             {{currentCountry?.name}}
         </mat-select-trigger>
-        <mat-option *ngFor="let country of countries" [value]="country.code">
+        <mat-option *ngFor="let country of countries" [value]="country.iso2">
             <div class="iti__flag-box">
-                <div class="iti__flag iti__{{country.code.toLowerCase()}}"></div>
+                <div class="iti__flag iti__{{country.iso2.toLowerCase()}}"></div>
             </div>
             {{ country.name }}
         </mat-option>
