--- a/src/app/widget/popup/prompt/prompt.component.html
+++ b/src/app/widget/popup/prompt/prompt.component.html
@@ -8,7 +8,7 @@
 </div>
 <mat-divider></mat-divider>
 <div mat-dialog-actions class="justify-content-end">
-  <button color="accent" type="button" class="w-25" mat-stroked-button [mat-dialog-close]="data.value">
+  <button color="accent" type="button" class="w-25" mat-stroked-button (click)="close()">
     {{ (data.confirm || 'button_confirm') | translate }}
   </button>
 </div>
