--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
@@ -1,6 +1,9 @@
 @import 'mixins';
 
 :host {
+  display: flex;
+  flex-direction: column;
+  min-height: 99%;
   .folder-title {
     font-size: inherit;
     margin: inherit;
